# allcookies.tracker

./: .gitignore  Jenkinsfile  README.md
allcookies-backend/: Cargo.toml
allcookies-tracker-backend/: .env  Cargo.toml  Dockerfile  docker-compose.yml  migrate.sh  publish.sh  sqlx-data.json
allcookies-tracker-backend/http/: activity-admin.http  activity-client.http  activity.http  test-backend.http
allcookies-tracker-backend/k8s/: publish.sh
allcookies-tracker-backend/k8s/app/: docker-compose.yml
allcookies-tracker-backend/k8s/app/allcookies-tracker/: Chart.yaml  values.yaml
allcookies-tracker-backend/migrations/: 20211210234855_user_account.sql  20211213202934_selling-point.sql  20211219211957_selling-point-is-disabled.sql  20211221190119_products.sql  20211223192229_activity.sql  20211228220540_refactor-selling-point.sql  20220103140321_add-time-to-activity.sql  20220114193712_product-quantity-null.sql  20220214192633_add-remaining-quantity-order-quantity.sql  V1__account.sql  V2__account_role.sql
allcookies-tracker-backend/src/: config.rs  error.rs  main.rs  migrations.rs  routes.rs
allcookies-tracker-backend/src/domain/: contract.rs  entities.rs  geo_primitives.rs  mod.rs  sqlx_helper_macros.rs
allcookies-tracker-backend/src/domain/activity/: contract.rs  repo.rs
allcookies-tracker-backend/src/domain/auth/: auth_service.rs  contract.rs  mod.rs  repos.rs  route.rs  test_integration.rs  test_unit.rs
allcookies-tracker-backend/src/domain/authentication/: contract.rs  mod.rs  routes.rs  svcs.rs
allcookies-tracker-backend/src/domain/authorization/: contract.rs  mod.rs  repos.rs  routes.rs  svcs.rs  test.rs
allcookies-tracker-backend/src/domain/current_user/: mod.rs  test.rs
allcookies-tracker-backend/src/domain/products/: contract.rs  mod.rs  repos.rs
allcookies-tracker-backend/src/domain/selling_points/: contract.rs  mod.rs  repos.rs  routes.rs  svcs.rs
allcookies-tracker-backend/src/features/: contract.rs  entities.rs  mod.rs  sqlx_helper_macros.rs
(+351 files in other folders)
