[package]
name = "allcookies-tracker-backend"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
actix-rt = "2.5"
actix-web = { version = "4.0.0-beta.13" }
async-trait = "0.1"
bcrypt = "0.10"
chrono = { version = "0.4", features = ["serde"] }
geozero={ version = "0.8", features=["default", "with-postgis-postgres", "with-postgis-sqlx"] }
geo-types = "0.7"
env_logger="0.9"
jwt = "0.15.0"
hmac = "0.11"
crypto-mac="0.11"
sha2 = "0.9"
serde_json = "1.0"
serde = "1.0"
sqlx = { version = "0.5",  features =  ["runtime-actix-native-tls", "chrono", "postgres", "macros", "offline"] }