[package]
name = "allcookies-tracker-backend"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
actix-rt = "2.5"
actix-web = { version = "3.3" }
async-trait = "0.1"
bcrypt = "0.10"
chrono = { version = "0.4", features = ["serde"] }
env_logger = "0.9"
jwt = "0.15.0"
hmac = "0.11"
crypto-mac = "0.11"
sha2 = "0.9"
serde_json = "1.0"
serde = "1.0"
sqlx = { version = "0.4", features = [
    "runtime-actix-rustls",
    "postgres",
    "macros",
    "offline",
    "chrono"
] }
validator = { version = "0.14", features = ["derive"] }
